<resources>
    <string name="app_name">Rallye Dashboard</string>

    <string name="button_next">Next</string>
    <string name="button_prev">Prev</string>
    <string name="button_open_roadbook">Open Roadbook</string>
    <string name="button_open_setup">Open Configuration</string>

    <string name="button_next_ld">Next</string>
    <string name="button_prev_ld">Prev</string>
    <string name="button_open_roadbook_ld">Open RB</string>
    <string name="button_open_setup_ld">Setup</string>

    <string name="button_increase_dist">+100M</string>
    <string name="button_raz">RESET</string>
    <string name="button_decrease_dist">-100M</string>

    <string name="img_caseC">Bottom case</string>
    <string name="img_caseB">Middle case</string>
    <string name="img_caseA">Top case</string>

    <string name="click_raz">Press long to RAZ</string>
    <string name="click_rb">Press long to Open Menu</string>

    <string name="pref_title_conf_odo">Configure odometer and chronometer</string>
    <string name="pref_edit_odo">Distance to increment odometer</string>
    <string name="pref_chrono_start">Distance before chronometer start</string>

    <string name="copyright">©2022 by A. DEWAS</string>
    <string name="comment">This is an Android app that can display the current roadbook and a chronometer/odometer/speedometer dashboard, that can be piloted by a ble remote.</string>

    <string name="odometer_format_10m">%.2f</string>
    <string name="odometer_format_100m">%.1f</string>
    <string name="speed_format">%03dkm/h</string>
    <string name="max_speed_format">%03dkm/h</string>
    <string name="avg_speed_format">%03.1fkm/h</string>
    <string name="timer_format">%02dm%02ds</string>
    <string name="zero_timer">00m00s</string>
    <string name="zero_odometer">0.00</string>
    <string name="zero_odometer_dec">0.0</string>
    <string name="zero_speed">000km/h</string>
    <string name="zero_max_speed">000km/h</string>
    <string name="zero_avg_speed">00,0km/h</string>
    <string name="alert_location_required">Location Required</string>
    <string name="alert_location_detail">Please enable Location in system settings to have a fully and precise odometer</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="time_pattern">HH:mm:ss</string>
    <string name="chronometer_pattern">mm\'m\'ss\'s\'</string>
    <string name="increase_button_pattern">+%dM</string>
    <string name="decrease_button_pattern">-%dM</string>
    <string name="rewind_roadbook">Rewind roadbook</string>
    <string name="are_you_sure_you_want_to_return_to_first_case">Are you sure, you want to return to first case ?</string>
    <string name="soutenir_le_projet">Donate</string>
    <string name="manuel_utilisateur_fr">User manual (FR)</string>
    <string name="theme_selection_dark_light_auto">Theme selection (dark/light/auto)</string>
    <string name="configure_display">Configure display</string>
    <string name="odometer_precision_to_10m">Odometer precision to 10m</string>
    <string name="convertisseur_de_roadbook">Roadbook pdf converter (for advanced user)</string>
    <string name="unit_km">km</string>
    <string name="configure_roadbook">Configure Roadbook</string>
    <string name="auto_load_last_roadbook_on_startup">Auto load last roadbook on startup</string>
    <string name="close_rallye_dashboard">Close Rallye Dashboard</string>
    <string name="quit_the_app">Quit the app ?</string>
    <string name="no_roadbook_loaded">No roadbook loaded</string>
    <string name="roadbook_loaded">Roadbook loaded : %s</string>
    <string name="rallye_dashboard_menu">Rallye Dashboard menu</string>
    <string name="select_amp_open_roadbook"><![CDATA[Select & open roadbook]]></string>
    <string name="convert_pdf">Convert PDF…</string>
    <string name="settings">Settings…</string>
    <string name="remote_mapping">Remote mapping…</string>
    <string name="convert_pdf_menu">Convert PDF</string>
    <string name="load_cfrr_preset">Load CFRR preset</string>
    <string name="load_trippy_preset">Load Trippy preset</string>
    <string name="convert">Convert</string>
    <string name="roadbook_loaded_dialog">Roadbook loaded !</string>
    <string name="roadbook_loaded_dialog_text">The roadbook %s is loaded.</string>
    <string name="ok">Ok</string>
    <string name="pdf_converted">Pdf converted !</string>
    <string name="the_pdf_was_converted_to_case_by_case_image_here_s">The pdf was converted to case by case image here %s</string>
    <string name="pdf_to_convert_s">PDF to convert : %s</string>
    <string name="press_key_for_next_case">Press key for next case</string>
    <string name="press_key_for_previous_case">Press key for previous case</string>
    <string name="press_key_for_increase_odometer">Press key for increase odometer</string>
    <string name="press_key_for_decrease_odometer">Press key for decrease odometer</string>
    <string name="press_key_for_raz">Press key for RAZ</string>
    <string name="select_action_to_configure">Select action to configure</string>
    <string name="s_selected">%s selected !</string>
    <string name="set">Set…</string>
    <string name="controller_configuration">Controller configuration</string>
    <string name="save">Save</string>
    <string name="reset_all">Reset all</string>
    <string name="next_case_action">Next case action</string>
    <string name="previous_case_action">Previous case action</string>
    <string name="increase_odometer_action">Increase odometer action</string>
    <string name="decrease_odometer_action">Decrease odometer action</string>
    <string name="raz_action">RAZ action</string>
    <string name="color_avg_speed_depending_target">Color AVG speed depending target</string>
    <string name="avg_speed_will_be_green_when_on_target_red_if_not">AVG Speed will be green when on target, red if not</string>
    <string name="avg_speed_will_stay_black">AVG Speed will stay black</string>
    <string name="avg_speed_target">AVG speed target</string>
    <string name="target_in_km_h">Target in km/h</string>
    <string name="avg_speed_green_range">AVG speed green range</string>
    <string name="green_range_in_km_h">Green +/- range in km/h</string>
    <string name="no_valid_custom_config">No valid custom config</string>
    <string name="d_row_per_column">%d row per column</string>
    <string name="load_saved_preset">Load saved preset</string>
    <string name="save_preset">Save preset</string>
    <string name="config_loaded">Config loaded !</string>
    <string name="preset_saved">Preset saved</string>
    <string name="app_cannot_function_without_gps">Odometer cannot work without fine location.</string>
    <string name="limited_use">Without a fine position, the odometer cannot work. But you still use the roadbook feature.</string>
</resources>