<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/pref_title_conf_odo">

    </PreferenceCategory>
    <ListPreference
        android:key="odometer_increment"
        android:title="@string/pref_edit_odo"
        android:defaultValue="10"
        android:entries="@array/IncrementOdometer"
        android:entryValues="@array/IncrementOdometerData" />

    <ListPreference
        android:key="chronometer_distance"
        android:title="@string/pref_chrono_start"
        android:defaultValue="40"
        android:entries="@array/DistanceChronometer"
        android:entryValues="@array/DistanceChronometerData" />

</PreferenceScreen>