<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c2c2c2"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageCaseA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_caseA"
        android:paddingHorizontal="5dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/case_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageCaseB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_caseB"
        android:paddingHorizontal="5dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/case_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCaseA" />


    <ImageView
        android:id="@+id/imageCaseC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#202020"
        android:contentDescription="@string/img_caseC"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/case_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCaseB" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCaseC">

        <Button
            android:id="@+id/btPageDown"
            style="@style/Custom_button.XL"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.31"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btPageUp"
            style="@style/Custom_button.L"
            app:tint="@color/background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.31"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_prev"
            app:layout_constraintStart_toEndOf="@id/btPageDown"
            app:layout_constraintEnd_toStartOf="@id/btSelectRoadbook"
            app:layout_constraintTop_toTopOf="@id/btPageDown"
            app:layout_constraintBottom_toBottomOf="@id/btPageDown"/>

        <ImageButton
            android:id="@+id/btSelectRoadbook"
            style="@style/Custom_button"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.15"
            android:keepScreenOn="true"
            android:text="@string/button_open_roadbook_ld"
            android:src="@drawable/opened_folder"
            app:tint="@color/background"
            app:layout_constraintEnd_toStartOf="@id/btOpenConfig"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toTopOf="@id/btPageDown"
            app:layout_constraintBottom_toBottomOf="@id/btPageDown"/>

        <ImageButton
            android:id="@+id/btOpenConfig"
            style="@style/Custom_button"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.15"
            android:keepScreenOn="true"
            android:text="@string/button_open_setup"
            android:src="@drawable/setup"
            app:tint="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btPageDown"
            app:layout_constraintBottom_toBottomOf="@id/btPageDown"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgOdometer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/txtOdometer"
        app:layout_constraintEnd_toStartOf="@id/txtOdometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtOdometer"
        app:srcCompat="@drawable/counter" />

    <TextView
        android:id="@+id/txtOdometer"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="0,00 km"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:textAppearance="@style/TextNoSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsBar" />

    <Button
        android:id="@+id/btIncreaseDist"
        style="@style/Custom_button.L"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtOdometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btDecreaseDist"
        app:layout_constraintWidth_percent="0.4"
        android:text="@string/button_increase_dist" />

    <Button
        android:id="@+id/btDecreaseDist"
        style="@style/Custom_button.L"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:keepScreenOn="true"
        android:text="@string/button_decrease_dist"
        app:layout_constraintTop_toBottomOf="@id/txtOdometer"
        app:layout_constraintStart_toEndOf="@id/btIncreaseDist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"/>

    <ImageView
        android:id="@+id/imgClock"
        android:layout_width="31dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/txtCurrentTime"
        app:layout_constraintEnd_toStartOf="@id/txtCurrentTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtCurrentTime"
        app:srcCompat="@drawable/clock" />

    <TextView
        android:id="@+id/txtCurrentTime"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="00:00:00"
        android:textStyle="bold"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:textAppearance="@style/TextNoSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btIncreaseDist"
        app:layout_constraintWidth_percent="0.4"/>

    <ImageView
        android:id="@+id/imgTimer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/txtTimer"
        app:layout_constraintEnd_toStartOf="@id/txtTimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTimer"
        app:srcCompat="@drawable/timer" />

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="00m00s"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:textAppearance="@style/TextNoSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrentTime"
        app:layout_constraintWidth_percent="0.4"/>

    <ImageView
        android:id="@+id/imgSpeed"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/txtSpeedOMeter"
        app:layout_constraintEnd_toStartOf="@id/txtSpeedOMeter"
        app:layout_constraintTop_toTopOf="@id/txtSpeedOMeter"
        app:srcCompat="@drawable/speedometer" />

    <TextView
        android:id="@+id/txtSpeedOMeter"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:text="000 km/h"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:textAppearance="@style/TextNoSize"
        app:layout_constraintStart_toStartOf="@id/txtAVGSpeed"
        app:layout_constraintTop_toBottomOf="@+id/btIncreaseDist"
        app:layout_constraintWidth_percent="0.30"/>

    <ImageView
        android:id="@+id/imgAVGSpeed"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/txtAVGSpeed"
        app:layout_constraintEnd_toStartOf="@id/txtAVGSpeed"
        app:layout_constraintTop_toTopOf="@id/txtAVGSpeed"
        app:srcCompat="@drawable/speedometer_avg" />

    <TextView
        android:id="@+id/txtAVGSpeed"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="000 km/h"
        android:textStyle="bold"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:textAppearance="@style/TextNoSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpeedOMeter"
        app:layout_constraintWidth_percent="0.33"/>

    <ImageView
        android:id="@+id/imgTOPSpeed"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/txtTOPSpeed"
        app:layout_constraintEnd_toStartOf="@id/txtTOPSpeed"
        app:layout_constraintTop_toTopOf="@id/txtTOPSpeed"
        app:srcCompat="@drawable/speedometer_top" />

    <TextView
        android:id="@+id/txtTOPSpeed"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="000 km/h"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:textAppearance="@style/TextNoSize"
        app:layout_constraintStart_toStartOf="@id/txtAVGSpeed"
        app:layout_constraintTop_toBottomOf="@+id/txtAVGSpeed"
        app:layout_constraintWidth_percent="0.3"/>

        <Button
            android:id="@+id/btRAZ"
            style="@style/Custom_button.L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_raz"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"

        app:layout_constraintBottom_toTopOf="@+id/buttonsBar2"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>